ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_modifiers.scss
table {

  .cell-align-top {
    vertical-align: top;
  }

  .cell-nowrap {
    white-space: nowrap;
  }

  .width-15-percent {
    box-sizing: border-box;
    padding-right: 1em;
    width: 15%;
  }

  .width-20-percent {
    box-sizing: border-box;
    padding-right: 1em;
    width: 20%;
  }

  .width-30-percent {
    box-sizing: border-box;
    padding-right: 1em;
    width: 30%;
  }

  .width-40-percent {
    box-sizing: border-box;
    padding-right: 1em;
    width: 40%;
  }

  .width-50-percent {
    box-sizing: border-box;
    padding-right: 1em;
    width: 50%;
  }

  .table-header-width-70-percent {
    width: 70%;
  }

  .table-header-width-60-percent {
    width: 60%;
  }

  .table-header-width-55-percent {
    width: 55%;
  }

  .table-header-width-40-percent {
    width: 40%;
  }

  .table-header-width-35-percent {
    width: 35%;
  }

  .table-header-width-15-percent {
    width: 15%;
  }

  .table-header-width-10-percent {
    width: 10%;
  }

  .table-header-width-20-percent {
    width: 20%;
  }

  .table-header-width-one-third {
    width: 33.3%;
  }

  .table-header-width-two-thirds {
    width: 66.6%;
  }

  .width-65 {
    width: 65px;
  }

  .width-80 {
    width: 80px;
  }

  .width-100 {
    width: 100px;
  }

  .width-150 {
    width: 150px;
  }

  .width-200 {
    width: 200px;
  }

  .width-250 {
    width: 250px;
  }


  .selection-button-checkbox {
    margin-left: 5px;
    width: 20px;
  }

  .govuk-radios__item,
  .govuk-checkboxes__item{
    margin-left: 3px;

    // The invisible label causes alignment issues with checkboxes within tables, restricting width and height cures this issue
    .invisible{
      display: inline-block;
      max-width: 50px;
      max-height: 20px;
      overflow: hidden;
    }
  }

  .empty-table-cell-select {
    margin-left: 20px;
  }

  .ifs-table__email {
    word-break: break-word;
  }

  .govuk-table__header {
    vertical-align: bottom;
  }

  .shaded-cell {
    background-color: govuk-colour("light-grey");
  }

  .border-left-cell {
    border-left: 2px solid govuk-colour("mid-grey");
  }

  .border-right-cell {
    border-right: 2px solid govuk-colour("mid-grey");
  }
}

@include media-down(mobile) {
  // To fix issue where tables appearing within a conditional section don't overflow correctly
  .govuk-checkboxes__conditional{
    .form-in-table{
      max-width: calc(100vw - 100px);
    }

    .govuk-table{
      min-width: 650px;
    }
  }
}

.table-overflow {
  overflow: auto;
  padding-bottom: 0.5em;
  width: 100%;

  // Forces visible scrollbar on browser/OS that might hide it by default
  &::-webkit-scrollbar {
    -webkit-appearance: none;
    background-color: rgba(0,0,0,0.1);
    height: 8px;
  }

  &::-webkit-scrollbar-thumb {
    background-color: rgba(0,0,0,.4);
    border-radius: 20px;
  }

  table{
    max-width: 99.9%;

    td {
      &:first-child{
        input,
        textarea {
          margin-left: 3px;
        }
      }
    }
  }
}


.table-stacked-mobile {

  td{
    .govuk-label {
      display: none;
    }
  }

  @include media-down(mobile) {

    + p {
      text-align: left;
    }

    thead {
      display: none;
    }

    tr{
      &.form-group-row-validated {
        border-top: 1px solid $govuk-border-colour;

        &:first-child{
          border:none;
        }
      }

      &.govuk-form-group--error {
        margin-right: 0px;
        border-left: none;
        padding-left: 0px;

        td{
          &.form-group-error {
            border-left: 4px solid $govuk-error-colour;
            margin-right: 15px;
            padding-left: 10px;
          }
        }
      }
    }

    td {
      &.form-group {
        width: 100%;
        float: left;
        border: none;

        label {
          .govuk-label {
            display: block;
            font-weight: 800;
          }
        }
      }
    }
  }
}

.hint {
  color: $govuk-secondary-text-colour;
}

hr,
.clear-floats{
  clear: both;
}

.govuk-panel--confirmation {
  .govuk-link {
    color: govuk-colour("white");

  }
}

.govuk-panel--grey {
  background:govuk-colour("light-grey");
}

.govuk-panel--confirmation-outline {
  border: 8px solid govuk-colour("turquoise");

  .govuk-panel__title {
    color: govuk-colour("turquoise");
  }
}

.govuk-link {
  &:focus {
    color: $govuk-text-colour;
  }
}

.govuk-body {
  a {
    color: $govuk-link-colour;

    &:focus {
      color: $govuk-text-colour;
    }

    &:active,
    &:hover {
      color: $govuk-link-hover-colour;
    }

    &:visited {
      color: $govuk-link-visited-colour;
    }
  }
}

.govuk-back-link {
  cursor: pointer;
}

.incomplete-status {
  @extend %action-required;
  @include govuk-font(16);
  font-weight: bold;
  padding-left: 20px;
  text-align: right;
}

.complete-status {
  @extend %icon-tick;
  @include govuk-font(16);
  background-size: 14px;
  color: $govuk-button-colour;
  font-weight: bold;
  padding-left: 20px;
  text-align: right;
}

.section-score {
  @include media-down(mobile){
    margin-right: 0;
    width: auto;
    float: none;
  }

  @include govuk-font(16);
  float: right;
  font-weight: normal;
  margin-right: 190px;
  width: 144px;
  text-align: left;
  color: $govuk-text-colour;
}

.vertical-align-baseline {
  vertical-align: baseline;

  &.button-clear {
    vertical-align: baseline;
  }
}

.vertical-line {
  display: inline-block;
  border-left: 2px solid govuk-colour("mid-grey");
  height: 1em;
  padding: 2px;
  vertical-align: bottom;
}

.govuk-input--width-25 {
  max-width:50ex
}

.width-100-percent {
  box-sizing: border-box;
  padding-right: 1em;
  width: 100%;
}

/* make selector more specific than autocomplete library. */
.autocomplete__input {
  &.govuk-input--error {
    @extend .govuk-input--error;
  }
}

/* Only display if javascript is present via css */
.hide-without-javascript {
  display:none;
}

.js-enabled {
  .hide-without-javascript {
    display:block;
  }
}

table {
  .hidden-error-labels {
    .govuk-error-message {
      display: none;
    }
  }
}

.error-heading-icon {
  &:before {
    content: "";
    background-image: url('../images/ifs-images/icons/icon-alert.png');
    background-repeat: no-repeat;
    background-position: left 100%;
    background-size: 14px;
    width: 20px;
    height: 20px;
    float: left;
  }
}

